test/error/ui64.lua
local a = 0xffffffff0hl
